加入股票画图模块

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/ann.py=utf-8
+encoding//src/fucheng/MakePlot.py=utf-8
+encoding//src/fucheng/url.py=utf-8
 encoding//src/ooq.py=utf-8
 encoding//src/test.py=utf-8
